S8: не очень разобрался вашей подсказки по поводу общих тестов,сделал немного иначе: 2 класса тестов наследуются от абстрактного класса а все методы в нем принимают разный экземпляр taskManager